--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "firefox-dist": "cross-env NODE_ENV=production TARGET=firefox gulp dist",
     "dist": "npm run chrome-dist && npm run opera-dist && npm run firefox-dist"
   },
+  "keywords":[
+    "chrome",
+    "extension",
+    "keywords",
+    "topics"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/EmailThis/extension-boilerplate"
